fix: contact form gap added

--- a/src/containers/ContactUs/components/ContactForm/ContactForm.module.scss
+++ b/src/containers/ContactUs/components/ContactForm/ContactForm.module.scss
@@ -37,6 +37,9 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
+  @media (max-width: 768px) {
+    gap: 20px;
+  }
 }
 
 .photo {
